# WebBou

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  build.ps1
.github/workflows/: build.yml  release.yml
client/: Cargo.toml
client/src/: compression.rs  lib.rs  main.rs
client/src/webbou/: batch.rs  client.rs  compression.rs  config.rs  crypto.rs  heartbeat.rs  interop.rs  mod.rs  protocol.rs  reconnect.rs
docs/: INSTALLATION.md  PROTOCOL.md  QUICKSTART.md
examples/: advanced_client.rs  chat_client.rs  simple_client.rs  simple_usage.rs
experimental/: main.go
protocol/: SPEC.md
protocol/testdata/: data_frame_v1.hex
scripts/: generate-dev-cert.ps1
server/: go.mod  go.sum  main_webbou.go  security.go
server/webbou/: auth.go  batch.go  compression.go  config.go  crypto.go  loadbalancer.go  logging.go  metrics.go  pool.go  protocol.go  protocol_test.go  ratelimit.go  server.go  state.go
