[package]
name = "webbou-client"
version = "0.3.0"
edition = "2021"
authors = ["WebBou Team"]
description = "High-performance custom protocol client (Go + Rust)"
license = "MIT"
repository = "https://github.com/FUXKVOB/WebBou"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# WebBou protocol dependencies
byteorder = "1.5"
crc32fast = "1.5"
lz4_flex = "0.13"
chacha20poly1305 = "0.10.1"
x25519-dalek = "2.0.1"
rand = "0.10.1"

[lib]
name = "webbou"
path = "src/lib.rs"

[[bin]]
name = "webbou-client"
path = "src/main.rs"
